# hs-gntp

./: BasicServer.hs  ConduitServer.hs  README.md  gntp.cabal
Data/Conduit/: GNTP.hs
Network/: GNTP.hs
tests/: Main.hs  client.py
tests/data/: register.example
